# VERTEX-CFD

./: CMakeLists.txt  LICENSE  README.md  index.md
src/: CMakeLists.txt
src/boundary_conditions/: VertexCFD_BCStrategy_BoundaryFluxBase.hpp  VertexCFD_BCStrategy_BoundaryFluxBase_impl.hpp  VertexCFD_BCStrategy_Factory.hpp  VertexCFD_BCStrategy_IncompressibleBoundaryFlux.hpp  VertexCFD_BCStrategy_IncompressibleBoundaryFlux_impl.hpp  VertexCFD_BCStrategy_IncompressibleLSVOFBoundaryFlux.cpp  VertexCFD_BCStrategy_IncompressibleLSVOFBoundaryFlux.hpp  VertexCFD_BCStrategy_IncompressibleLSVOFBoundaryFlux_impl.hpp  VertexCFD_BoundaryState_VariableExtrapolate.cpp  VertexCFD_BoundaryState_VariableExtrapolate.hpp  VertexCFD_BoundaryState_VariableExtrapolate_impl.hpp  VertexCFD_BoundaryState_VariableFixed.cpp  VertexCFD_BoundaryState_VariableFixed.hpp  VertexCFD_BoundaryState_VariableFixed_impl.hpp  VertexCFD_BoundaryState_VariableFlux.cpp  VertexCFD_BoundaryState_VariableFlux.hpp  VertexCFD_BoundaryState_VariableFlux_impl.hpp  VertexCFD_BoundaryState_ViscousGradient.hpp  VertexCFD_BoundaryState_ViscousGradient_impl.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameter.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameterMetricTensor.cpp  VertexCFD_BoundaryState_ViscousPenaltyParameterMetricTensor.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameterMetricTensor_impl.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameter_impl.hpp  VertexCFD_Integrator_BoundaryGradBasisDotVector.hpp  VertexCFD_Integrator_BoundaryGradBasisDotVector_impl.hpp
src/closure_models/: VertexCFD_ClosureModelFactory_impl.hpp  VertexCFD_Closure_ConstantVectorField.cpp  VertexCFD_Closure_ConstantVectorField.hpp  VertexCFD_Closure_ConstantVectorField_impl.hpp  VertexCFD_Closure_ExternalFields_impl.hpp  VertexCFD_Closure_ExternalInterpolation.cpp  VertexCFD_Closure_ExternalInterpolation.hpp  VertexCFD_Closure_ExternalInterpolation_impl.hpp  VertexCFD_Closure_ExternalMagneticField.hpp  VertexCFD_Closure_ExternalMagneticField_impl.hpp  VertexCFD_Closure_MeasureElementLength_impl.hpp  VertexCFD_Closure_MethodManufacturedSolutionSource.hpp  VertexCFD_Closure_MethodManufacturedSolutionSource_impl.hpp  VertexCFD_Closure_MethodManufacturedSolution_impl.hpp  VertexCFD_Closure_MetricTensor_impl.hpp  VertexCFD_Closure_VariableConvectiveFlux.cpp  VertexCFD_Closure_VariableConvectiveFlux.hpp  VertexCFD_Closure_VariableConvectiveFlux_impl.hpp  VertexCFD_Closure_VariableDiffusionFlux.cpp  VertexCFD_Closure_VariableDiffusionFlux.hpp  VertexCFD_Closure_VariableDiffusionFlux_impl.hpp  VertexCFD_Closure_VariableOldValue.cpp  VertexCFD_Closure_VariableOldValue.hpp  VertexCFD_Closure_VariableOldValue_impl.hpp  VertexCFD_Closure_VariableSUPGFlux.cpp  VertexCFD_Closure_VariableSUPGFlux.hpp  VertexCFD_Closure_VariableSUPGFlux_impl.hpp  VertexCFD_Closure_VariableTauSUPG.cpp  VertexCFD_Closure_VariableTauSUPG.hpp  VertexCFD_Closure_VariableTauSUPG_impl.hpp  VertexCFD_Closure_WallDistance.hpp  VertexCFD_Closure_WallDistance_impl.hpp
src/drivers/: VertexCFD_InitialConditionManager.cpp  VertexCFD_PhysicsManager.cpp  VertexCFD_PhysicsManager.hpp  vertexcfd.cpp
src/equation_sets/: VertexCFD_EquationSet_Conduction.cpp  VertexCFD_EquationSet_Conduction.hpp  VertexCFD_EquationSet_ConductionFactory.hpp  VertexCFD_EquationSet_Conduction_impl.hpp  VertexCFD_EquationSet_FluidFactory.hpp  VertexCFD_EquationSet_FullInductionMHD.cpp  VertexCFD_EquationSet_FullInductionMHD.hpp  VertexCFD_EquationSet_FullInductionMHDFactory.hpp  VertexCFD_EquationSet_FullInductionMHD_impl.hpp  VertexCFD_EquationSet_IncompressibleLSVOF.cpp  VertexCFD_EquationSet_IncompressibleLSVOF.hpp  VertexCFD_EquationSet_IncompressibleLSVOF_impl.hpp  VertexCFD_EquationSet_IncompressibleNavierStokes.hpp  VertexCFD_EquationSet_IncompressibleNavierStokes_impl.hpp  VertexCFD_EquationSet_RAD.cpp  VertexCFD_EquationSet_RAD.hpp  VertexCFD_EquationSet_RADFactory.hpp  VertexCFD_EquationSet_RAD_impl.hpp  VertexCFD_EquationSet_SolidInductionLessMHD.cpp  VertexCFD_EquationSet_SolidInductionLessMHD.hpp  VertexCFD_EquationSet_SolidInductionLessMHDFactory.hpp  VertexCFD_EquationSet_SolidInductionLessMHD_impl.hpp
src/full_induction_mhd_solver/: CMakeLists.txt
src/initial_conditions/: VertexCFD_InitialConditionFactory_impl.hpp  VertexCFD_InitialCondition_Circle_impl.hpp  VertexCFD_InitialCondition_Constant_impl.hpp  VertexCFD_InitialCondition_Gaussian.hpp  VertexCFD_InitialCondition_Gaussian_impl.hpp  VertexCFD_InitialCondition_InverseGaussian_impl.hpp  VertexCFD_InitialCondition_Sinusoidal.cpp  VertexCFD_InitialCondition_Sinusoidal.hpp  VertexCFD_InitialCondition_Sinusoidal_impl.hpp  VertexCFD_InitialCondition_Step_impl.hpp
src/linear_solvers/: VertexCFD_LinearSolvers_CusolverGLU.cpp  VertexCFD_LinearSolvers_LOWSFactoryBuilder.cpp  VertexCFD_LinearSolvers_LocalSolverFactory.cpp  VertexCFD_LinearSolvers_Preconditioner.cpp  VertexCFD_LinearSolvers_PreconditionerFactory.cpp
src/mesh/: VertexCFD_Mesh_GeometryData.hpp  VertexCFD_Mesh_GeometryPrimitives.hpp  VertexCFD_Mesh_Restart.cpp  VertexCFD_Mesh_StkReaderFactory.cpp
src/observers/: VertexCFD_Compute_ErrorNorms.hpp  VertexCFD_Compute_ErrorNorms_impl.hpp  VertexCFD_Compute_Volume.hpp  VertexCFD_Compute_Volume_impl.hpp  VertexCFD_NOXObserver_IterationOutput.cpp  VertexCFD_TempusObserver_IterationOutput_impl.hpp  VertexCFD_TempusObserver_ResponseOutput_impl.hpp  VertexCFD_TempusTimeStepControl_GlobalCFL_impl.hpp  VertexCFD_TempusTimeStepControl_GlobalTimeStep_impl.hpp
src/parameters/: VertexCFD_GeneralScalarParameter_impl.hpp  VertexCFD_ParameterDatabase.cpp  VertexCFD_ParameterDatabase.hpp
src/plasma_solver/: CMakeLists.txt
src/responses/: VertexCFD_ResponseManager.cpp  VertexCFD_ResponseManager.hpp  VertexCFD_Response_Utils.hpp
src/test_harness/: VertexCFD_EvaluatorTestHarness.hpp  test_main.cpp
src/utils/: CMakeLists.txt  VertexCFD_Utils_BCStrategy_Defines.cpp  VertexCFD_Utils_Constants.hpp  VertexCFD_Utils_ExplicitTemplateInstantiation.hpp  VertexCFD_Utils_GetValue.hpp  VertexCFD_Utils_MagneticDim.cpp  VertexCFD_Utils_MagneticDim.hpp  (+21 more)
(+738 files in other folders)
